z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     /* центрування по обом осям */
-    z-index: 10;
+    z-index: 5;
     /* щоб не перекривали клітинки, якщо треба */
     background-color: rgba(255, 255, 255, 0.9);
     /* або інше оформлення */
